tests/paczka1/fuzzy1/17942647.err
Error in line 2: ONr S595 73,2
Error in line 23: 9mzkanN1 S595 155,6
Error in line 30: M~p88dY~ S595 0,6
